[FEATURE] : Add specific PHP code inclusion in forms actions
[FEATURE] : Add support for mod_xsendfile if exists to boost file download when served by PHP
[FEATURE] : Add HTML5 attributes to atm-input tags
[FEATURE] : Add attributes support to atm-form tags and rewrite for action attribute

V4.1.4 (in progress)
[BUG] : Correct bugs numbers: 2049, 2070, 2154, 2162, 2195, 2252, 2265, 2271, 2272 (see http://www.automne-cms.org/bug/)
[BUG] : Correct bug for better handling of HTTPS websites and cross HTTP and HTTPS websites on the same Automne
[BUG] : Correct bug with external home page redirection
[BUG] : Correct bug with tags which only contain character zero
[BUG] : Correct bug with atm-form tags and cache
[BUG] : Correct some inconsistencies with the recursive atm-linx
[REFACTOR] : Add {{jsdata}} to block text

V4.1.3 (02/05/2011)
[BUG] : Correct bugs numbers: 1860, 2021, 2024, 2032, 2039, 2040, 2043, 2044 (see http://www.automne-cms.org/bug/)
[BUG] : Correct a bug with atm-search-param tag when search type is item and value is block
[BUG] : Users can set categories or pages rights above their own. They can also set grups denied even if they do not have rights for it.
[BUG] : Secondary resources are deleted with the attached primary resource
[BUG] : Correct some minors bugs in module import
[REFACTOR] : Refactor daily routine to add a check on server parameters page
[REFACTOR] : Add some details on polymod rows help
[FEATURE] : Add {page:XXX:exists} var to check if a page exists without throwing an error

V4.1.2 (12/04/2011)
[BUG] : Correct bugs numbers: 1916, 1860, 1861, 1837 (see http://www.automne-cms.org/bug/)
[REFACTOR] : Update upload file whitelist
[REFACTOR] : Change session token max age from 600  to 1800 seconds
[REFACTOR] : Update phpMyAdmin to version 3.3.10
[REFACTOR] : Add links to access users / groups properties from all users/groups management listing
[REFACTOR] : Move VERSION and CHANGELOG files into /automne folder