@@ -44,6 +44,7 @@ V4.2.0 (in progress)
 [FEATURE] : Add support for mod_xsendfile if exists to boost file download when served by PHP
 [FEATURE] : Add HTML5 attributes to atm-input tags
 [FEATURE] : Add attributes support to atm-form tags and rewrite for action attribute
+[FEATURE] : Add polymod text search options: "begin with" and "restrict to text field"
 
 V4.1.4 (in progress)
 [BUG] : Correct bugs numbers: 2049, 2070, 2154, 2162, 2195, 2252, 2265, 2271, 2272 (see http://www.automne-cms.org/bug/)
